discussion/kv_engine/155544/155544_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46827: Introduce KVBucket::hasCapacityInCheckpoints()

Used at VBucket add/set, same as where we verify our existing memory
conditions.
Currently the checkpoint_memory_ratio is set to 1.0 in configuration,
so the memory behaviour of the system stays logically unchanged.

Change-Id: I29368cdee147fe6421398a75aff25f47e00725ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-07-14 09:43:28.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-14 09:49:16.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37677/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37677/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11201/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11201/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/148/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/148/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/148/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12115/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12115/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12282/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12622/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12622/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/119/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/119/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20168/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20168/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10536/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3297:26: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    if (bucket && !bucket->hasCapacityInCheckpoints()) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:49:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3448:26: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    if (bucket && !bucket->hasCapacityInCheckpoints()) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:49:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10536/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3297:26:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10536/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32136/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.cc:3297:26:
error: member access into incomplete type "KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32136/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9183/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
